# cookiecutter-python

./: .envrc  .gitignore  cookiecutter.json  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 8kcifwa363jvs9llm76p167y64wfgcpy-source  frdjqj92bbc99qzy1aa0xx19f40a2ar2-source  i9xkgl5rpkxv2qdp47wsvarxdhcs7k74-source  kna9jyi73b2xcm8wral8g2gjh1b8xlsh-source  kqx126kbcqsdhrbm96j2m87drpd1s0y8-source  pm3n8n9jcfigbjaq6m2r6vrq4f6kcrda-source
.github/: copilot-instructions.md  settings.yml
.github/workflows/: build.yaml
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .cz.toml  .envrc  .gitignore  .mypy.ini  .pre-commit-config.yaml  Justfile  README.md  Vagrantfile  cz.toml  flake.nix  mkdocs.yml  pyproject.toml  tox.ini  {% if cookiecutter.is_installable.lower()=='true' -%}pyproject.toml{%- endif %}  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_name}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_name}}/.github/: copilot-instructions.md  settings.yml
{{cookiecutter.project_name}}/.github/workflows/: checks.yaml  create-tag.yaml  quality-gate.yaml  release.yaml
{{cookiecutter.project_name}}/docker/: Dockerfile  provision.sh
{{cookiecutter.project_name}}/nix/: ci.nix  dev.nix  lib.nix  overrides.nix  packages.nix
{{cookiecutter.project_name}}/tests/: test_packaging_attribute.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __init__.py
