[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "{{cookiecutter.project_name}}"
authors = [{name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">= {{cookiecutter.python_version}}"
dependencies = []

[project.optional-dependencies]
dev = [
    "add-trailing-comma",
    "autopep8",
    "bandit",
    "flake8",
    "ipython",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-lazy-fixture",
    "pyupgrade",
    "reorder-python-imports",
    "tox",
    "xenon",
    "{{cookiecutter.project_name}}[docs]",
]
docs = [
    "mkdocs",
    "mkdocs-material"
]

[tool.flit.module]
name = "{{cookiecutter.project_slug}}"
