[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "{{cookiecutter.project_name}}"
authors = [{name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">= {{cookiecutter.python_version}}"
dependencies = []

[project.optional-dependencies]
dev = [
    "{{cookiecutter.project_name}}[typing]",
    "{{cookiecutter.project_name}}[tests]",
    "{{cookiecutter.project_name}}[docs]",
]
typing = ["mypy"]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-lazy-fixture",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]

[tool.flit.module]
name = "{{cookiecutter.project_slug}}"

[tool.pdm]
distribution = false
